--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 Hello World
+
+This is my home page! My name is Adrian Bautista and I am a student at [Cal State Fullerton](http://www.fullerton.edu/) and my major is computer science.
+
+## Computer Science Projects
+
+My GitHub page is http://github.com/bautista-aa.
+
+### CPSC 120
+
+* Lab 5
+
+    Lab 5, part 1 was a favorite because it was based off of the previous
+    lab 3, which was done a couple weeks prior. Unlike before, we were able
+    to type the arguments in the command line instead of using cin to take
+    input from the user.
+    
+* Lab 6
+
+    Lab 6, part 1 was a favorite because of how interesting the end result
+    looked. We were basically programming a kntting machine in order to 
+    create a design; we did so through the use of for-loops. There were some
+    difficulties but it was a fun problem to solve.
+
+* Lab 7
+
+    Lab 7, part 3 was a favorite because until then I never thought about
+    programming an animation, even though we made a pattern in the previous
+    lab. This project required to read the contents of an animation file,
+    which I did by using ifstream. It was enjoyable to see that my
+    program was able to run the animation.
